[package]
name = "tfa"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
argon2 = "0.2.0"
chacha20poly1305 = "0.8.0"
clap = "2.33.3"
clipboard = "0.5.0"
dirs = "3.0.2"
libreauth = "0.14.1"
rand_core = { version = "0.6.2", features = ["std"] }
ron = "0.6.4"
rpassword = "5.0.1"
serde = "1.0.126"
